@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1075 2003/05/28 03:06:29 paultucker Exp $
+ * $Id: ChangeLog,v 1.1076 2003/05/28 04:09:57 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,7 +8,12 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
- 2003-05-27 20:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+2003-05-27 22:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbexprc.c
+  * source/compiler/harbour.sly
+    ! Fixed support for WithData <operator>= Expression
+
+2003-05-27 20:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   + include/hbvmprv.h
     + New header for definitions NOT shared with the Compiler.
   * source/vm/hvm.c
